--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
                 <a href="#process">Процесс</a>
                 <a href="#contact">Контакты</a>
             </div>
+            <div class="mobile-menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </nav>
     </header>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <div class="mobile-menu-content">
+            <a href="#services">Услуги</a>
+            <a href="#portfolio">Портфолио</a>
+            <a href="#process">Процесс</a>
+            <a href="#contact">Контакты</a>
+        </div>
+    </div>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -36,11 +49,23 @@
             </div>
         </div>
         <div class="hero-animation">
-            <div class="code-animation">
-                <div class="code-line"></div>
-                <div class="code-line"></div>
-                <div class="code-line"></div>
-                <div class="code-line"></div>
+            <div class="code-window">
+                <div class="code-header">
+                    <div class="code-dots">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="code-title">script.py</div>
+                </div>
+                <div class="code-content">
+                    <div class="code-line"><span class="code-keyword">import</span> telegram</div>
+                    <div class="code-line"><span class="code-keyword">from</span> fastapi <span class="code-keyword">import</span> FastAPI</div>
+                    <div class="code-line"><span class="code-keyword">class</span> <span class="code-class">Solution</span>:</div>
+                    <div class="code-line">&nbsp;&nbsp;<span class="code-keyword">def</span> <span class="code-function">__init__</span>(<span class="code-param">self</span>):</div>
+                    <div class="code-line">&nbsp;&nbsp;&nbsp;&nbsp;<span class="code-param">self</span>.result = <span class="code-string">"Успех"</span></div>
+                    <div class="code-line blinking-cursor">|</div>
+                </div>
             </div>
         </div>
     </section>
@@ -271,8 +296,6 @@
 
             <form class="contact-form" id="projectForm">
                 <h3>Быстрая заявка</h3>
-                <input type="text" placeholder="Ваше имя" required>
-                <input type="text" placeholder="Ваш Telegram" required>
                 
                 <select required>
                     <option value="">Выберите тип проекта</option>
@@ -288,8 +311,8 @@
                 </select>
                 
                 <input type="text" placeholder="Ориентировочный бюджет">
-                <textarea placeholder="Описание проекта" rows="4"></textarea>
-                <button type="submit" class="btn btn-primary">Отправить заявку</button>
+                <textarea placeholder="Опишите ваш проект..." rows="4" required></textarea>
+                <button type="submit" class="btn btn-primary">Обсудить проект в Telegram</button>
             </form>
         </div>
     </section>
